--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <script type="module" crossorigin src="/chinese-wordle/assets/index.d87d3efb.js"></script>
     <link rel="modulepreload" href="/chinese-wordle/assets/vendor.5ca68ae6.js">
     <link rel="stylesheet" href="/chinese-wordle/assets/index.d00f99e8.css">
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?5269ef2b63afcfb69525a1f4c8a02429";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+      })();
+    </script>
+
   </head>
   <body>
     <div id="app"></div>
